--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <header> 
         <a href="index.html" style="text-decoration: none; color: inherit;">
-            <h1>木と鉄と油について</h1>
+            <h1>green record</h1>
         </a>
     <nav>
         <ul>
@@ -22,7 +22,11 @@
 
 <main>
     <section>
-        <h1>こんにちは。お元気ですか。</h1>
+        <h1>
+            <a href="http://goldenrecord.org/" class="no-style" target="_blank">
+                こんにちは。お元気ですか。
+            </a>
+        </h1>
         <p>工事中。</p>
     </section>
 </main>
