--- a/note.html
+++ b/note.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html" style="text-decoration: none; color: inherit;">
-            <h1>木と鉄と油について</h1>
+            <h1>green record</h1>
         </a>
         <nav>
             <ul>
