--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html" style="text-decoration: none; color: inherit;">
-            <h1>木と鉄と油について</h1>
+            <h1>green record</h1>
         </a>
         <nav>
             <ul>
@@ -22,9 +22,10 @@
     </header>
 <main>
     <section>
-      <p>木と鉄と油について、たまにhtmlを書き込みに来ます。</p>
-      <p></p>
       <p>山本 駿平　yamamoto hayahira</p>
+      <p>漫画を描くことがある。
+たまにhtmlを書き込みに来ます。</p>
+      <p></p>
       <p>mail  yamamotohayahira@gmail.com</p>
       <p>shop  <a href="https://fruitknife.theshop.jp/">果物ナイフ</a></p>
       <p>sns  <a href="https://bsky.app/profile/yyyyy02222.bsky.social">Bluesky</a></p>
