--- a/note.html
+++ b/note.html
@@ -33,20 +33,37 @@
     // 日記を入力する
     const diaryData = [
         {
-            title: "忙しい一日",
+            title: "ごあいさつ",
             content: `
-今日は一日中仕事が忙しく、昼食を取る暇もなかったが、
-夜に家でゆっくりと食事を取ることができた。
-↑チャットGPTが自動生成してくれた。全然仕事もないし昼ご飯はたっぷりとった。
+
+　こんにちは。ホームページができた。ちょくちょく模様替えしながらずっと続けられたらいいな。
+前まではタンブラーを使っていたけれど、漫画がパソコンでもスマホでも読みづらかったので、ずっとなんとかしたかった。それから、こういう感じで文章を書きたいなあと思っていたのだけれど、ちょうどいいサービスが見つからなかったので、せっかくだし全部自分で作ってみようとなり、こうなりました。
+　文章というのは、最近読んだ漫画とか小説とか、みた映画とかの話だったり、考えたことだとか、あったことだとかそういったとりとめのないことを、気分で書いたり書かなかったりしたい。
+　僕が、ネットの隅っこに書かれた絵描きの少し長い、たいていは少し陰った文章が大好きなので、そういうものをつくれたらいいと思っている。SNSは、そういうことを書くには開かれすぎているし、あまり見ていて気持ちのいいものではないことが多いだろうから。
+　なのでここには、漫画やBlueskyだけをみていたい人にとって、「そんな人だとは思いませんでした」となるような、極端な言葉も出てくるかもしれないので、気をつけてください。単に文章が下手で見てられないこともあるかもしれない。
+　一ヶ月に一回くらいで更新できたらいいな。
 `
         },
         {
-            title: "コミティアの後",
+            title: "コミティア150",
             content: `
-コミティアが終わってから何をすればいいかよくわからないので（やることはある）
-古市で乙嫁語りの続きを十巻まで買ったりほかにもいろいろ買って読んだ。
+
 `
-        }
+        },
+        {
+            title: "『光ってみえるもの、あれは』",
+            content: `
+
+　川上弘美の『光ってみえるもの、あれは』を読んだ。
+　昔『蛇を踏む』を買ったのは覚えているが、結局最後まで読んだのか、途中で読むのをやめたのか覚えておらず、ともあれおそらく引っ越しの際に売ってしまったような気がする。すべてが曖昧。
+それからしばらくして、イトイ圭の『花と頬』を読んでいたときに、その『蛇を踏む』がちらとでてきた。（ああ、そういえばなんか前読んだような、、）となりちょっと気になりはじめ、この前古本屋に行ったときちょうどよく川上弘美の『光ってみえるもの、あれは』と『物語がはじまる』があったので、買った。『物語がはじまる』はまだ読んでいない。
+　読み始めて思ったことだけれど、異様に読みやすい。『蛇を踏む』がどうも文の掴みどころなく、読むのが難しかったような印象がおぼろげにあったので、これは児童書として書かれたのかなとも疑ったほど。同じ作家でも、こんなに表面を変えられるのか。すごい。
+　文字の物語を読んでいていつも思うことだけれど、常に彼らは言葉というものを使いながら、言葉からどれだけ遠くに行けるかということ、そのずっとずっと先にあるものにどれだけにじり寄れるか、ということをしているんだなあ。言葉で言葉をやっつけるような。自分のことが大嫌いなんだろう。それを感じるとすごく好きになる。この作品もそれがあって好き。
+　作品全体にきれいなものへの拒否を感じた。きれいな言葉きれいな会話きれいな関係きれいな結末。全部書いてやんねえという感じ。でも別に犯罪とかバッドエンドとかを書いてるわけではない。普通の男の子の普通の生活。そういう矜恃大好き。
+　そんなわかりやすい、きれいなものってないよなあ。全部が曖昧でどちらかといえば不快で不明瞭で、どうでもいいのにうるさいことしかない。そういう世界でどちらかといえば好きを掴んで生きてくしかないんだよなあと思った。
+　この本を見つけたのと同じような感じで。
+`
+        },
     ];
 
     // 日記セクションを生成する関数
