--- a/note.html
+++ b/note.html
@@ -32,22 +32,21 @@
     <script>
     // 日記を入力する
     const diaryData = [
-        {
-            title: "ごあいさつ",
+       {
+            title: "2025年1月　本と服と悪魔のいけにえ",
             content: `
 
-　こんにちは。ホームページができた。ちょくちょく模様替えしながらずっと続けられたらいいな。
-前まではタンブラーを使っていたけれど、漫画がパソコンでもスマホでも読みづらかったので、ずっとなんとかしたかった。それから、こういう感じで文章を書きたいなあと思っていたのだけれど、ちょうどいいサービスが見つからなかったので、せっかくだし全部自分で作ってみようとなり、こうなりました。
-　文章というのは、最近読んだ漫画とか小説とか、みた映画とかの話だったり、考えたことだとか、あったことだとかそういったとりとめのないことを、気分で書いたり書かなかったりしたい。
-　僕が、ネットの隅っこに書かれた絵描きの少し長い、たいていは少し陰った文章が大好きなので、そういうものをつくれたらいいと思っている。SNSは、そういうことを書くには開かれすぎているし、あまり見ていて気持ちのいいものではないことが多いだろうから。
-　なのでここには、漫画やBlueskyだけをみていたい人にとって、「そんな人だとは思いませんでした」となるような、極端な言葉も出てくるかもしれないので、気をつけてください。単に文章が下手で見てられないこともあるかもしれない。
-　一ヶ月に一回くらいで更新できたらいいな。
-`
-        },
-        {
-            title: "コミティア150",
-            content: `
+　『物語が、はじまる』はあんま読んでません。1話目だけ読んで開いてない。そういうこともある。というかそういうことばかりある。
+アルベルト・ジャコメッティについての本が欲しいけど、どれも高いしどれがいいのかもわからないので、手を出せていない。おすすめあれば教えてください。
+中園孔二のインタビュー動画（1、2分のが70本近くある。かなり面白いのできょうみあれば見てほしい）で舞城王太郎という方の本がでてきてたので、『みんな元気。』『阿修羅ガール』『熊の場所』を買った。どれも表紙がいい。
+SF小説ももっと読みたい。古本屋でばかり小説を買っているからか、あまり読んでこれていなかったことに気がついた。これもおすすめあれば教えてください。
+だけど書籍費を漫画、小説ばかりに使ってしまっているので、月に一冊くらい画集なり美術書なりを買っていきたいなあ。画集棚を充実させたい。
 
+一人暮らししてから服を必要に駆られなければ全く買わなくなったけど、3、4年位前に古着500円で買えたリーバイスの503の形が改めてかなりいいなとなったので、必要ではないけど同じ型番もう一本色違い買おうかな♪と調べたら廃盤になってて悲しい。
+あと前までは「服はユニクロ、無印しか買わん」くらい好みが偏ってたけど、今は少し変な服もいいなと思いはじめたのが、自分が変わっていってる感じがしていい。外がベージュだけど内が紫ぽい色のアウターを買った。前の自分なら絶対内の色みて買うのやめてたと思う。
+
+YouTubeで『悪魔のいけにえ』が無料公開されていたのでみた。（以下ネタバレあり）
+鑑賞者の依り代を突然失わせてよく知らん女の人の悲鳴を永遠きく映画だった。あとは藤本タツキめちゃめちゃ影響受けてるんだなあとかバイオハザードでこんな感じのんみたなという感じ。みてよかった。もうみないです。
 `
         },
         {
@@ -64,6 +63,19 @@
 　この本を見つけたのと同じような感じで。
 `
         },
+        {
+            title: "ごあいさつ",
+            content: `
+
+　こんにちは。ホームページができた。ちょくちょく模様替えしながらずっと続けられたらいいな。
+前まではタンブラーを使っていたけれど、漫画がパソコンでもスマホでも読みづらかったので、ずっとなんとかしたかった。それから、こういう感じで文章を書きたいなあと思っていたのだけれど、ちょうどいいサービスが見つからなかったので、せっかくだし全部自分で作ってみようとなり、こうなりました。
+　文章というのは、最近読んだ漫画とか小説とか、みた映画とかの話だったり、考えたことだとか、あったことだとかそういったとりとめのないことを、気分で書いたり書かなかったりしたい。
+　僕が、ネットの隅っこに書かれた絵描きの少し長い、たいていは少し陰った文章が大好きなので、そういうものをつくれたらいいと思っている。SNSは、そういうことを書くには開かれすぎているし、あまり見ていて気持ちのいいものではないことが多いだろうから。
+　なのでここには、漫画やBlueskyだけをみていたい人にとって、「そんな人だとは思いませんでした」となるような、極端な言葉も出てくるかもしれないので、気をつけてください。単に文章が下手で見てられないこともあるかもしれない。
+　一ヶ月に一回くらいで更新できたらいいな。
+`
+        },
+
     ];
 
     // 日記セクションを生成する関数
