--- a/note.html
+++ b/note.html
@@ -38,11 +38,11 @@
 
 　『物語が、はじまる』はあんま読んでません。1話目だけ読んで開いてない。そういうこともある。というかそういうことばかりある。
 アルベルト・ジャコメッティについての本が欲しいけど、どれも高いしどれがいいのかもわからないので、手を出せていない。おすすめあれば教えてください。
-中園孔二のインタビュー動画（1、2分のが70本近くある。かなり面白いのできょうみあれば見てほしい）で舞城王太郎という方の本がでてきてたので、『みんな元気。』『阿修羅ガール』『熊の場所』を買った。どれも表紙がいい。
+アーティストの中園孔二のインタビュー動画（1、2分のが70本近くある。かなり面白いので興味があればぜひ見てほしい）で舞城王太郎という方の本がでてきてたので、『みんな元気。』『阿修羅ガール』『熊の場所』を買った。どれも表紙がいい。
 SF小説ももっと読みたい。古本屋でばかり小説を買っているからか、あまり読んでこれていなかったことに気がついた。これもおすすめあれば教えてください。
 だけど書籍費を漫画、小説ばかりに使ってしまっているので、月に一冊くらい画集なり美術書なりを買っていきたいなあ。画集棚を充実させたい。
 
-一人暮らししてから服を必要に駆られなければ全く買わなくなったけど、3、4年位前に古着500円で買えたリーバイスの503の形が改めてかなりいいなとなったので、必要ではないけど同じ型番もう一本色違い買おうかな♪と調べたら廃盤になってて悲しい。
+一人暮らししてから服は必要に駆られなければ全く買わなくなったけど、3、4年位前に古着500円で買えたリーバイスの503の形が改めてかなりいいなとなったので、必要ではないけど同じ型番もう一本色違い買おうかな♪と調べたら廃盤になってて悲しい。
 あと前までは「服はユニクロ、無印しか買わん」くらい好みが偏ってたけど、今は少し変な服もいいなと思いはじめたのが、自分が変わっていってる感じがしていい。外がベージュだけど内が紫ぽい色のアウターを買った。前の自分なら絶対内の色みて買うのやめてたと思う。
 
 YouTubeで『悪魔のいけにえ』が無料公開されていたのでみた。（以下ネタバレあり）
