--- a/note.html
+++ b/note.html
@@ -32,6 +32,30 @@
     <script>
     // 日記を入力する
     const diaryData = [
+         {
+            title: "2025年2月　憧れの闇エネルギー、最近の歯磨き、『こちらあみ子』",
+            content: `
+
+自分は「憧れ」という言葉を一般的な認識とは異なる認識で使っているかもしれない。
+
+憧れ…理想とする物事に強く心が引かれること。ある人や物事に対して、強く心引かれ、その存在や状態を自分自身に求める心情を表す言葉である。
+
+↑ネット検索
+確かに、憧れの人、ものに出会うと「良すぎる、こうなりたい（こういうのをつくりたい）、、、」と上記のような心情にはもちろんなる。けれど同時に「、、、この野郎が、ぶっ潰す、、、」みたいな感情も必ずセットで出てくるので、この闇エネルギーも含めて「憧れ」と呼ぶのかと思っていた。
+なので人といい絵をみながらそれについて話しているとき、めちゃくちゃ憧れると言いながら、敵みたいな扱いで話してしまって反応困らせてしまう。やめたほうが良い。
+絵を教えてくれていた人が、肉を食べる量を減らしたら、前より他人に腹が立たなくなった、悔しいと思わなくなったと言っていたが、あまり肉を食べないのに憧れの人や絵に出会うたび、毎回腹が煮えくり返って頭をかきむしってる自分はどうすればいいんだ。歳重ねたらましになるのかな。
+
+歯磨きが下手なので歯ブラシを持ってる手に歯磨き粉で泡立ったよだれが垂れてくることがよくある。そうなったときの選択肢として、ティッシュを使って歯ブラシの柄をくるんで泡を吸収しつつ歯磨きを続行するという選択肢と、あえて口をガン開きにして全てを垂らしながら歯磨きを続行するという選択肢の二択があり、最近は割と口ガン開きが楽しい。なんかこっちのほうが汚れがどんどん落ちていくぜぇ感がある気がする。
+
+久しぶりに映画を観ようと思って『こちらあみ子』を選んだ自分を褒めたい。（以下ネタバレあり
+話も画面もとても良かった。
+大人の首からを上を写さない構図が多くあったように思う。あみ子の身長の視点だから頭まで入らないというのもあると思うし、人の顔色を伺うことをしない（できない）あみ子という視点でもあるかも。それで恐ろしく居心地の悪い間が何度もあった。自分が思ってたよりも人の顔色を見ながら話していたんだなあ思った。
+弱い自分は、一体どうすればあみ子にとっても周りの人間にとっても良かったのかを考えてしまう。でもどっちもは選べない、みんながみんな幸せになる方法などない、、、MONONOAWAREの『東京』ですわね。
+ラストの海でのシーンが本当に本当に良かった。ここで決定的に本当に好きな映画になった。良かったというのは安堵の意味の良かったでもある。みんなから見放されてひとりになっても、あちらからの手招きに手を振り返すことのできるあみ子（タイトルってこちらにいることを選ぶあみ子という意味でもあるのかと今思った。）、生きていく力を持っていてくれて本当にありがとう。勝手だけど、それだけがこの何も好転しない映画の救いだったように思う。
+うーーー、、、でもなあ、、
+何も言えないですわ、、、。みんなみて。
+`
+        },
        {
             title: "2025年1月　本と服と悪魔のいけにえ",
             content: `
