--- a/note.html
+++ b/note.html
@@ -49,11 +49,11 @@
 
 久しぶりに映画を観ようと思って『こちらあみ子』を選んだ自分を褒めたい。（以下ネタバレあり
 話も画面もとても良かった。
-大人の首からを上を写さない構図が多くあったように思う。あみ子の身長の視点だから頭まで入らないというのもあると思うし、人の顔色を伺うことをしない（できない）あみ子という視点でもあるかも。それで恐ろしく居心地の悪い間が何度もあった。自分が思ってたよりも人の顔色を見ながら話していたんだなあ思った。
+大人の首からを上を写さない構図が多くあったように思う。あみ子の身長の視点だから頭まで入らないというのもあると思うし、人の顔色を伺うことをしない（できない）あみ子という視点でもあるかも。それで恐ろしく居心地の悪い間が何度もあった。自分は思ってたよりも日頃人の顔色を見ながら話していたんだなあと気づいた。
 弱い自分は、一体どうすればあみ子にとっても周りの人間にとっても良かったのかを考えてしまう。でもどっちもは選べない、みんながみんな幸せになる方法などない、、、MONONOAWAREの『東京』ですわね。
 ラストの海でのシーンが本当に本当に良かった。ここで決定的に本当に好きな映画になった。良かったというのは安堵の意味の良かったでもある。みんなから見放されてひとりになっても、あちらからの手招きに手を振り返すことのできるあみ子（タイトルってこちらにいることを選ぶあみ子という意味でもあるのかと今思った。）、生きていく力を持っていてくれて本当にありがとう。勝手だけど、それだけがこの何も好転しない映画の救いだったように思う。
 うーーー、、、でもなあ、、
-何も言えないですわ、、、。みんなみて。
+何も言えない、、、。みんなみて。
 `
         },
        {
