--- a/note.html
+++ b/note.html
@@ -32,6 +32,27 @@
     <script>
     // 日記を入力する
     const diaryData = [
+          {
+            title: "2025年3月　編集作業が楽しいな　他",
+            content: `
+
+引っ越し、展示準備、コミティア申し込み、その他もろもろ一月からあった予定がとりあえず終わりました。やったー
+
+今は次の関コミ、東京のコミティア（東京のコミティアのこと一語でなんて言えばいいのかいまだにわからない。東コミ？コミティア？）に出す短編集の編集と描き下ろしの制作をぼちぼちしています。
+短編集なので作品の順番を考えるのが、難しいけれど面白い。ちょうど去年あたりから、好きなバンドやアーティストの音楽はできるだけCDで聴くようになり、曲順とかにも意味があるんだなあということを認識し始めたので、より。
+それから、目次とかタイトルとか奥付のデザインもまったくわからないけれど楽しい。絵描くのよりも面白くなってきて少しまずい。このホームページ作った時もものすごく面白かったので、創作よりもこういうののほうが好きなのかもしれないなあ。
+いつも2日前入稿とかしてるけど、今回は余裕をもって入稿したいな。
+
+今は舞城王太郎の『阿修羅ガール』を読んでいるけど、読むの遅すぎる人間なので一ヶ月かかっても半分しか読めてない。
+半分読んだ感想としては昔のガイナックス味がある。調べたら鶴巻和哉『龍の歯医者』に参加してるし、だよね〜。
+ただ表面は軽妙洒脱でキッチュでありつつ、愛について誠実に扱っている、考えている（というか考えた結果がその軽やかさなのかも）がするのでとても好感がある。まだ読み切ってないので信用しきってはないが。
+
+時間に余裕ができたので映画を観始めた。『CURE』『櫻の園』『木と市長と文化会館　または七つの偶然』をみた。どれも面白いなあという感じ。めちゃくちゃ面白いというものはなかった。なんでもそうだけど10本みて1本自分に刺さればいいほうだよね。
+ただ何となく最近、物語のことを少しわかったような気がする。感じとしては、今まですごくしっかりとした人みたいな印象を持っていた人が話してみると、「実は結構この人も曖昧でテキトーなとこあるんだな」ってなったみたいな。あーー人間だあみたいな。なんかそんな感じ。気がするだけかもしれんが。
+
+四月まで職なしなので、今のうちに進めることや、やりたいことやっときたいです。では
+`
+        },
          {
             title: "2025年2月　憧れの闇エネルギー、最近の歯磨き、『こちらあみ子』",
             content: `
