--- a/manga.html
+++ b/manga.html
@@ -69,6 +69,31 @@
                 const mangaId = title.parentElement.dataset.mangaId;
 
                 const images = {
+                      i: [
+                        "images/maboroshi_008.jpg",
+                        "images/maboroshi_009.jpg",
+                        "images/maboroshi_010.jpg",
+                        "images/maboroshi_011.jpg",
+                        "images/maboroshi_012.jpg",
+                        "images/maboroshi_013.jpg",
+                        "images/maboroshi_014.jpg",
+                        "images/maboroshi_015.jpg",
+                        "images/maboroshi_016.jpg",
+                        "images/maboroshi_017.jpg",
+                        "images/maboroshi_018.jpg",
+                        "images/maboroshi_019.jpg",
+                        "images/maboroshi_020.jpg",
+                        "images/maboroshi_021.jpg",
+                        "images/maboroshi_022.jpg",
+                        "images/maboroshi_023.jpg",
+                        "images/maboroshi_024.jpg",
+                        "images/maboroshi_025.jpg",
+                        "images/maboroshi_026.jpg",
+                        "images/maboroshi_027.jpg",
+                        "images/maboroshi_028.jpg",
+                        "images/maboroshi_029.jpg",
+                        "images/maboroshi_030.jpg",
+                    ],
                     a: [
                         "images/majutu1.jpg",
                         "images/majutu2.jpg",
