--- a/manga.html
+++ b/manga.html
@@ -24,7 +24,7 @@
     <main>
         <section>
             <div class="manga" data-manga-id="u">
-                <h3>準備中「まぼろしは光線のような」</h3>
+                <h3>「まぼろしは光線のような」</h3>
                 <p>「緑とナイフと王国たち」収録　関西コミティア69にて発表、販売　2024年</p>
             </div>
             <div class="manga" data-manga-id="a">
