--- a/manga.html
+++ b/manga.html
@@ -23,19 +23,19 @@
 
     <main>
         <section>
-            <div class="manga" data-manga-id="u">
+            <div class="manga" data-manga-id="a">
                 <h3>「まぼろしは光線のような」</h3>
                 <p>「緑とナイフと王国たち」収録　関西コミティア69にて発表、販売　2024年</p>
             </div>
-            <div class="manga" data-manga-id="a">
+            <div class="manga" data-manga-id="b">
                 <h3>「魔術師の犬」</h3>
                 <p>「緑とナイフと王国たち」収録　関西コミティア69にて発表、販売　2024年</p>
             </div>
-            <div class="manga" data-manga-id="i">
+            <div class="manga" data-manga-id="c">
                 <h3>「地獄の口、楽園の門。」</h3>
                 <p>「地獄の口、楽園の門。」収録　コミティア149にて発表、販売　2024年</p>
             </div>
-            <div class="manga" data-manga-id="u">
+            <div class="manga" data-manga-id="d">
                 <h3>公開予定「レイクサイド・ハイウェイ」</h3>
                 <p>「レイクサイド・ハイウェイ」収録　コミティア150にて発表、販売　2024年</p>
             </div>
@@ -69,7 +69,7 @@
                 const mangaId = title.parentElement.dataset.mangaId;
 
                 const images = {
-                      u: [
+                      a: [
                         "images/maboroshi_008.jpg",
                         "images/maboroshi_009.jpg",
                         "images/maboroshi_010.jpg",
@@ -94,7 +94,7 @@
                         "images/maboroshi_029.jpg",
                         "images/maboroshi_030.jpg",
                     ],
-                    a: [
+                    b: [
                         "images/majutu1.jpg",
                         "images/majutu2.jpg",
                         "images/majutu3.jpg",
@@ -103,7 +103,7 @@
                         "images/majutu6.jpg",
                         "images/majutu7.jpg"
                     ],
-                    i: [
+                    c: [
                         "images/jigoku_001.jpg",
                         "images/jigoku_002.jpg",
                         "images/jigoku_003.jpg",
@@ -120,7 +120,7 @@
                         "images/jigoku_014.jpg",
                         "images/jigoku_015.jpg"
                     ],
-                    u: [
+                    d: [
                         "images/dog_image1.png",
                         "images/dog_image2.png"
                     ]
