--- a/note.html
+++ b/note.html
@@ -32,6 +32,32 @@
     <script>
     // 日記を入力する
     const diaryData = [
+         {
+            title: "2025年4月　乱筆乱文原文マミー",
+            content: `
+
+メモ帳にあった文
+
+勝手にこちらを神棚に上げて自分とは違う人種として扱ってくる人、対話する気がなくて不快なのでやめてほしい、てめえも素晴らしい作品つくってるだろうが。
+それにたぶん自分が相手のほうが格上だと感じる（この感覚もすごくアホらしいけれど）と、ほんとに悔しくて腹立たしくて寝床でうめき声を上げるくらいなので、周りの人間もそうあってほしいというだけ。もっと悔しがれよ！なあ！
+他人は他人、自分は自分と分けれていない自分が幼いくてヤになるね。自他境界があいまい？
+
+大きな流れの世界（社会ともいえる）の中のほんの小さなところに自分の住処があって、そこには外の世界から流れてきた好きなものがいっぱいあって、いつもは窓から向こうの世界の風景を見たり見なかったりしてて、たまに外出てみるかと思って絵とか漫画を出す、発表する？という感じなのだけど、絵画で描くものはほとんど自分の建物の中の話という感じで、漫画は内から外の世界を想像してみた話。
+
+絵とその周辺のこと以外にしたいことがなく、毎日がそれかご飯かバイト（今は前のバイトと新しいバイトの間の無職期間だけど）の3つで構成されているので、人と話すとき絵以外喋ることがないし、そもそも話したいレベルの絵の話しても通じることがほとんどないし、相手から絵以外の話をされてもちゃんと興味を持って聞くことができない。演技ならできるけどたぶん演技なのはバレている。下手なので演技が。
+人とどうやってなにを話せばいいですか。天気とか趣味とか好きな映画とか？そういうの話してHCT（ハッピーコミュニケーションタイム）したこと一度もないなあ。
+最近気づいたけど複数人でいるときのほうが話しやすい。タイマンはあまりにも自分にかかる会話役割の比重が大きすぎる。
+複数人はそれぞれが好きなところで、気になったところで発言したり、質問したり、したい話したりできるから、各自の比重が軽い。
+タイマンは興味ないことも聞かなきゃいけないし質問もしたほうがいい。自分のセンサーにひっかかるものがなにもない時のあの時間、、、興味ありますよーっていう演技はできるけど、すごい全部が嫌になっていく。しかも演技なの気づかれてるだろうから、すごいわざとらしくて嫌な印象与えるだろうな。
+
+大学終わってフリーターになっって一ヶ月くらい過ごしているけれど早くも人生の長さに対する絶望感を感じている。
+よく新入社員が働き始めて少したって「この生活があと40年か」とかいう絶望感を感じるといった話はよく聞くけど、働いてなくても同じようなことを感じるとは思わなかった。
+たぶんいままでは意識しなくても自動的にあった節目というものがなくなったからだろうな。
+小学校6年、中学校3年、高校3年、大学4年、残り死ぬまで60年くらい、あまりにもバランスがおかしいだろ。
+
+ホラー系の館の絵描きたいとなって『悪魔のいけにえ』とか『サイコ』とか調べたら、『サイコ』の家はエドワード・ホッパーの『線路脇の家』という絵からきているらしく、「おい〜ホッパ〜てめえこの野郎〜😁😁」ってなった。
+`
+        },
           {
             title: "2025年3月　編集作業が楽しいな　他",
             content: `
