--- a/note.html
+++ b/note.html
@@ -36,7 +36,14 @@
             title: "2025年4月　乱筆乱文原文マミー",
             content: `
 
-メモ帳にあった文
+最近は短編集の描き下ろしをかいています。いつもの「この漫画おもろいか？」期間に入りました。でもこの感覚が毎度のやつじゃなくて、ほんとにおもしろくないのかも知れない。
+先月は池澤夏樹の『スティル・ライフ』と森見登美彦の『きつねのはなし』と津村記久子『サキの忘れ物』を読んだ。
+池澤夏樹ってなぜか声優やってる人のことだと思ってた。めちゃ好きでした。他の本も買い漁った。
+『サキの忘れ物』は「王国」というはなしが好きだった。『君は永遠にそいつらより若い』が好きなのでそれを求めてたらあんまなかった。
+あと月刊湿地帯というおいし水さん（作家の名前には敬称付けなくても気にならないけど、おいし水さんはつけないと気になるのなんでだろう。敬意の度合いの話ではない）のホームページを読み漁っています。
+模様替えしたら部屋広くなった。
+
+以下メモ帳にあった文
 
 勝手にこちらを神棚に上げて自分とは違う人種として扱ってくる人、対話する気がなくて不快なのでやめてほしい、てめえも素晴らしい作品つくってるだろうが。
 それにたぶん自分が相手のほうが格上だと感じる（この感覚もすごくアホらしいけれど）と、ほんとに悔しくて腹立たしくて寝床でうめき声を上げるくらいなので、周りの人間もそうあってほしいというだけ。もっと悔しがれよ！なあ！
