--- a/note.html
+++ b/note.html
@@ -49,7 +49,7 @@
 それにたぶん自分が相手のほうが格上だと感じる（この感覚もすごくアホらしいけれど）と、ほんとに悔しくて腹立たしくて寝床でうめき声を上げるくらいなので、周りの人間もそうあってほしいというだけ。もっと悔しがれよ！なあ！
 他人は他人、自分は自分と分けれていない自分が幼いくてヤになるね。自他境界があいまい？
 
-大きな流れの世界（社会ともいえる）の中のほんの小さなところに自分の住処があって、そこには外の世界から流れてきた好きなものがいっぱいあって、いつもは窓から向こうの世界の風景を見たり見なかったりしてて、たまに外出てみるかと思って絵とか漫画を出す、発表する？という感じなのだけど、絵画で描くものはほとんど自分の建物の中の話という感じで、漫画は内から外の世界を想像してみた話。
+大きな流れの世界（社会ともいえる）の中のほんの小さなところに自分の住処があって、そこには外の世界から流れてきた好きなものがいっぱいあって、いつもは窓から向こうの世界の風景を見たり見なかったりしてて、たまに外出てみるかと思って絵とか漫画を出す、発表する？という感じなのだけど、絵画で描くものはほとんど自分の建物の中の話、漫画は内から外の世界を想像してみた話という感じ？
 
 絵とその周辺のこと以外にしたいことがなく、毎日がそれかご飯かバイト（今は前のバイトと新しいバイトの間の無職期間だけど）の3つで構成されているので、人と話すとき絵以外喋ることがないし、そもそも話したいレベルの絵の話しても通じることがほとんどないし、相手から絵以外の話をされてもちゃんと興味を持って聞くことができない。演技ならできるけどたぶん演技なのはバレている。下手なので演技が。
 人とどうやってなにを話せばいいですか。天気とか趣味とか好きな映画とか？そういうの話してHCT（ハッピーコミュニケーションタイム）したこと一度もないなあ。
