--- a/note.html
+++ b/note.html
@@ -63,6 +63,8 @@
 小学校6年、中学校3年、高校3年、大学4年、残り死ぬまで60年くらい、あまりにもバランスがおかしいだろ。
 
 ホラー系の館の絵描きたいとなって『悪魔のいけにえ』とか『サイコ』とか調べたら、『サイコ』の家はエドワード・ホッパーの『線路脇の家』という絵からきているらしく、「おい〜ホッパ〜てめえこの野郎〜😁😁」ってなった。
+
+おしまい
 `
         },
           {
