--- a/note.html
+++ b/note.html
@@ -40,7 +40,7 @@
 先月は池澤夏樹の『スティル・ライフ』と森見登美彦の『きつねのはなし』と津村記久子『サキの忘れ物』を読んだ。
 池澤夏樹ってなぜか声優やってる人のことだと思ってた。めちゃ好きでした。他の本も買い漁った。
 『サキの忘れ物』は「王国」というはなしが好きだった。『君は永遠にそいつらより若い』が好きなのでそれを求めてたらあんまなかった。
-あと月刊湿地帯というおいし水さん（上の小説家の名前には敬称付けなくても気にならないけど、おいし水さんはつけないと気になるのなんでだろう。敬意の度合いの話ではない）のホームページを読み漁っています。
+あと月刊湿地帯というおいし水さん（上の小説家の名前には敬称付けなくても気にならないけど、おいし水さんはつけないと気になるのなんでだろう。敬意の度合いの話ではない。心理的な距離感の問題？）のホームページを読み漁っています。
 模様替えしたら部屋広くなった。ジークアクス（映画ではないほう）みた。初ガンダム。
 
 以下メモ帳にあった文
