--- a/manga.html
+++ b/manga.html
@@ -28,7 +28,7 @@
                 <p>「緑とナイフと王国たち」収録　関西コミティア69にて発表、販売　2024年</p>
             </div>
             <div class="manga" data-manga-id="b">
-                <h3>「魔術師の犬」</h3>
+                <h3>「魔術師の犬の大冒険」</h3>
                 <p>「緑とナイフと王国たち」収録　関西コミティア69にて発表、販売　2024年</p>
             </div>
             <div class="manga" data-manga-id="c">
