--- a/note.html
+++ b/note.html
@@ -32,6 +32,16 @@
     <script>
     // 日記を入力する
     const diaryData = [
+        {
+            title: "2025年5月　漫画終わらない",
+            content: `
+
+漫画が終わらない。なんかもうこの漫画が面白いかどうかわからないという期間は過ぎて、今はこの漫画はたいして面白くはないがそれでも描き上げるしかないという気持ち。たぶんここであきらめると二度とこの漫画は描かないと思う。締め切りだけがこの漫画の推進力になっている。
+短編集のほうは4月最終日に入稿終わって今は印刷中だと思う。思ってた以上に入稿手順が複雑で大変だった。一色刷りでこんなに大変だったのを考えるとカラーで入稿してる人ほんとにすごいな。
+試し刷りとかをしてないのでどんな仕上がりになってるか予想できなくて怖い。でももうどうなっててもどうしようもないから、そんなに焦っているわけではない。
+取り急ぎ5月の文でした。
+`
+        },
          {
             title: "2025年4月　乱筆乱文原文マミー",
             content: `
