--- a/note.html
+++ b/note.html
@@ -37,7 +37,8 @@
             content: `
 
 漫画が終わらない。なんかもうこの漫画が面白いかどうかわからないという期間は過ぎて、今はこの漫画はたいして面白くはないがそれでも描き上げるしかないという気持ち。たぶんここであきらめると二度とこの漫画は描かないと思う。締め切りだけがこの漫画の推進力になっている。
-短編集のほうは4月最終日に入稿終わって今は印刷中だと思う。思ってた以上に入稿手順が複雑で大変だった。一色刷りでこんなに大変だったのを考えるとカラーで入稿してる人ほんとにすごいな。
+短編集のほうは4月最終日に入稿終わって今は印刷中だと思う。今まではあとがきは書いてこなかった（書けるほど余裕がなかった）けど、短編集はあとがきやら覚書があって、漫画よりその文書を人に読まれると思うと恥ずかしい。いい文書をかける人憧れる。でもいろいろデザインの関係で入らなかった文とか、本に載せるほどでもない文とか制作過程でできた切れ端みたいな文がたくさんあるので落ち着いたらここに載せられたりできたらいい。
+思ってた以上に入稿手順が複雑で大変だった。一色刷りでこんなに大変だったのを考えるとカラーで入稿してる人ほんとにすごいな。
 試し刷りとかをしてないのでどんな仕上がりになってるか予想できなくて怖い。でももうどうなっててもどうしようもないから、そんなに焦っているわけではない。
 取り急ぎ5月の文でした。
 `
