--- a/note.html
+++ b/note.html
@@ -40,7 +40,10 @@
 短編集のほうは4月最終日に入稿終わって今は印刷中だと思う。今まではあとがきは書いてこなかった（書けるほど余裕がなかった）けど、短編集はあとがきやら覚書があって、漫画よりその文書を人に読まれると思うと恥ずかしい。いい文書をかける人憧れる。でもいろいろデザインの関係で入らなかった文とか、本に載せるほどでもない文とか制作過程でできた切れ端みたいな文がたくさんあるので落ち着いたらここに載せられたりできたらいい。
 思ってた以上に入稿手順が複雑で大変だった。一色刷りでこんなに大変だったのを考えるとカラーで入稿してる人ほんとにすごいな。
 試し刷りとかをしてないのでどんな仕上がりになってるか予想できなくて怖い。でももうどうなっててもどうしようもないから、そんなに焦っているわけではない。
-取り急ぎ5月の文でした。
+あと今月からその時お気に入りの曲を紹介します。今月は
+PUFFY『日曜日よりの使者』
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6PQx7qgMz9JThKGoSQb6dD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+では。
 `
         },
          {
