--- a/note.html
+++ b/note.html
@@ -41,7 +41,8 @@
 思ってた以上に入稿手順が複雑で大変だった。一色刷りでこんなに大変だったのを考えるとカラーで入稿してる人ほんとにすごいな。
 試し刷りとかをしてないのでどんな仕上がりになってるか予想できなくて怖い。でももうどうなっててもどうしようもないから、そんなに焦っているわけではない。
 
-あと今月からその時お気に入りの曲を紹介します。今月は
+あと今月からその時お気に入りの曲を紹介します。そういう気分なので。来月には忘れてるかもしれん。
+はじめの今月は
 
 PUFFY『日曜日よりの使者』
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6PQx7qgMz9JThKGoSQb6dD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
