--- a/note.html
+++ b/note.html
@@ -32,6 +32,25 @@
     <script>
     // 日記を入力する
     const diaryData = [
+                {
+            title: "2025年7月　人間の行動",
+            content: `
+
+ご無沙汰です。7月です。1か月空いてしまいました。特に忙しかったわけでもなくただ空きました。まあ人間の行動について言えば、たいていのことは理由があることのほうが少ないですから。そうなんですか？
+今は9月初めにある展示の絵を描いています。好きな作家面々が展示していてよく見に行っていたギャラリーで運よく展示できることになったので、頑張りたいと思いつつもいつもより、いいものを出さなければという気持ちの焦りや人に絵をみられることに対する抵抗感がない。なんというか、描けるものしか描けないし描けたものしか出せない、というような諦観のようなものがある。どちらかというと絵と自分のやり取りのほうが楽しくて、できたものがどうなっていてどうみられるのかということをあまり意識していない。
+場慣れしたのかな。いいことなのか悪いことなのかはわからない。こういうことを頭のいい人に言うと、バランスだよとか言ってくるよね。そうなんだろうけど何故か少し腹立ちます。
+
+漫画は12月のZINEフェスに誘ってもらったのでそこで出す本やら、ほかにも数本考えないとな～という感じですが、マルチタスクができないのであまり考えれてない。
+物語をつくるのって世界一難しいことなんじゃないかと思います。まじで。
+
+あとここでも言いますが、ツイッターのほうリポストした投稿みてくれましたか。見てない方はぜひ見てくださいね。ね。
+では。
+
+今月の音楽（忘れてなかった、kanekoayanoのライブ最高でした）
+kanekoayano「noise」
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/76bnlCEiTpreuTJDWmmsSG?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+`
+        },
         {
             title: "2025年5月　漫画終わらない",
             content: `
