--- a/note.html
+++ b/note.html
@@ -43,7 +43,7 @@
 漫画は12月のZINEフェスに誘ってもらったのでそこで出す本やら、ほかにも数本考えないとな～という感じですが、マルチタスクができないのであまり考えれてない。
 物語をつくるのって世界一難しいことなんじゃないかと思います。まじで。
 
-あとここでも言いますが、ツイッターのほうでリポストした投稿みてくれましたか。見てない方はぜひ見てくださいね。ね。
+あとここでも言いますが、ツイッターのほうでリポストした投稿みてくれましたか。見てない方はぜひ見てくださいね。見たらツイッターからログアウトしてアンインストールして現実の世界をみようね。
 では。
 
 今月の音楽（忘れてなかった、kanekoayanoのライブ最高でした）
