--- a/manga.html
+++ b/manga.html
@@ -36,7 +36,7 @@
                 <p>「地獄の口、楽園の門。」収録　コミティア149にて発表、販売　2024年</p>
             </div>
             <div class="manga" data-manga-id="d">
-                <h3>公開予定「レイクサイド・ハイウェイ」</h3>
+                <h3>「レイクサイド・ハイウェイ」</h3>
                 <p>「レイクサイド・ハイウェイ」収録　コミティア150にて発表、販売　2024年</p>
             </div>
         </section>
@@ -174,6 +174,7 @@ popup.addEventListener('touchend', (event) => {
 </script>
 </body>
 </html>
+
 
 
 
