--- a/manga.html
+++ b/manga.html
@@ -91,14 +91,14 @@ const images = {
         'images/lake_038.jpg','images/lake_039.jpg','images/lake_040.jpg','images/lake_041.jpg',
         'images/lake_042.jpg','images/lake_043.jpg','images/lake_044.jpg','images/lake_045.jpg',
         'images/lake_046.jpg','images/lake_047.jpg','images/lake_048.jpg','images/lake_049.jpg',
-         'images/lake_050.jpg','images/lake_051.jpg','images/lake_052.jpg','images/lake_053.jpg',
-         'images/lake_054.jpg','images/lake_055.jpg','images/lake_056.jpg','images/lake_057.jpg',
-         'images/lake_058.jpg','images/lake_059.jpg','images/lake_060.jpg','images/lake_061.jpg',
-           'images/lake_062.jpg','images/lake_063.jpg','images/lake_064.jpg','images/lake_065.jpg',
-           'images/lake_066.jpg','images/lake_067.jpg','images/lake_068.jpg','images/lake_069.jpg',
-           'images/lake_070.jpg','images/lake_071.jpg','images/lake_072.jpg','images/lake_073.jpg',
-           'images/lake_074.jpg','images/lake_075.jpg','images/lake_076.jpg','images/lake_077.jpg',
-           'images/lake_078.jpg',
+        'images/lake_050.jpg','images/lake_051.jpg','images/lake_052.jpg','images/lake_053.jpg',
+        'images/lake_054.jpg','images/lake_055.jpg','images/lake_056.jpg','images/lake_057.jpg',
+        'images/lake_058.jpg','images/lake_059.jpg','images/lake_060.jpg','images/lake_061.jpg',
+        'images/lake_062.jpg','images/lake_063.jpg','images/lake_064.jpg','images/lake_065.jpg',
+        'images/lake_066.jpg','images/lake_067.jpg','images/lake_068.jpg','images/lake_069.jpg',
+        'images/lake_070.jpg','images/lake_071.jpg','images/lake_072.jpg','images/lake_073.jpg',
+        'images/lake_074.jpg','images/lake_075.jpg','images/lake_076.jpg','images/lake_077.jpg',
+        'images/lake_078.jpg'
     ]
 };
 
@@ -174,6 +174,7 @@ popup.addEventListener('touchend', (event) => {
 </script>
 </body>
 </html>
+
 
 
 
